...
    <string name="no_new_summits">No new summits found</string>
    <string name="app_name">Summit Book</string>
    <string name="waiting_for_location">Waiting for location…</string>
    <string name="location_permission_denied">Location permission denied. Please enable it in settings.</string>
    <string name="required">required</string>
    <string name="optional">optional</string>
    <string name="nav_summits">Summits</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_diagrams">Diagrams</string>
    <string name="nav_osmap">Map</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_diashow">Image Diashow</string>
    <string name="nav_import">Import backup</string>
...
    <string name="tab_text_3">Map</string>
    <string name="tab_text_4">Power</string>

    <string name="bar_charts">Bar Charts</string>
    <string name="summit_image">Summit image</string>
    <string name="overview">Overview</string>
    <string name="action_settings">Settings</string>
    <string name="vs">vs</string>
    <string name="map_type">Change map type</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="search">Search</string>
    <string name="my_position">Location</string>
    <string name="participants">Participants</string>
...
    <string name="tcx_switch_title">Download tcx instead of gpx</string>
    <string name="garmin_mfa_switch">Turn this option if you have activated multifactor authentication in Garmin Connect</string>
    <string name="garmin_mfa_switch_title">Garmin MFA</string>
    <string name="debug_switch">Turn this option on if you want to disable anything which runs in the background at the start of the app</string>
    <string name="debug_switch_title">Disable background tasks</string>
    <string name="current_year_summary">Turn this option to change the default behaviour at startup</string>
    <string name="current_year_title">Show entries of current year</string>
    <string name="startup_auto_update_summary">Turn this option to update third party data at startup</string>
    <string name="startup_auto_update_title">Update third party data at startup</string>
    <string name="annual_target_height_meter_summary">Please provide your annual target for elevation gain</string>
    <string name="annual_target_height_meter_title">Annual target for elevation gain</string>
    <string name="annual_target_kilometer_summary">Please provide your annual target for kilometers covered</string>
    <string name="annual_target_kilometer_title">Annual target for kilometers</string>
...
